--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "daisyui": "^2.33.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -37,6 +38,9 @@
     ]
   },
   "devDependencies": {
+    "@iconify/react": "^4.0.0",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
     "tailwindcss": "^3.2.1"
   }
 }
