--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "daisyui": "^2.33.0",
     "dom": "^0.0.3",
+    "flowbite": "^1.5.4",
+    "flowbite-datepicker": "^1.2.2",
+    "flowbite-react": "^0.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
