--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "daisyui": "^2.33.0",
     "dom": "^0.0.3",
     "flowbite": "^1.5.4",
-    "flowbite-datepicker": "^1.2.2",
     "flowbite-react": "^0.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "router": "^1.3.7",
+    "tailwind-datepicker-react": "^1.2.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
